# infomaniak-dyndns-wildcard

./: .dockerignore  .envrc  .mise.toml  Cargo.toml  Dockerfile  LICENCE  README.md
.github/workflows/: main.yml
passwords/: .gpg-id
passwords/infomaniak/: api-token.gpg
src/: dns_record.rs  main.rs  public_ip.rs
