[package]
name = "infomaniak-dyndns-wildcard"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0"

[dev-dependencies]
mockito = "1.0"

[[bin]]
name = "infomaniak-dyndns-wildcard"
path = "src/main.rs"
