[package]
name = "infomaniak-dyndns-wildcard"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0"

[dev-dependencies]
mockito = "1.0"

[[bin]]
name = "infomaniak-dyndns-wildcard"
path = "src/main.rs"
